--- a/CadastroTDR/View/Cadastro.html
+++ b/CadastroTDR/View/Cadastro.html
@@ -35,6 +35,7 @@
 </head>
 
 <body>
+ <img src="img/titulo01.png" >
     <h2>Cadastro de Associado - Trilhos do Rio</h2>
     <form name="cadastrar" action="Cadastro.php" method="post" onsubmit="validaForm(); return true;" class="form">
         <p class="nome">
@@ -68,7 +69,7 @@
         </p>
         <p class="Endereco">
             <label for="Endereco">Endereco</label>
-            <input type="text" name="endereco" placeholder="Endereco" />
+            <input type="text" name="endereco" id="endereco" placeholder="Endereco" />
         </p>
         <p class="Numero">
             <label for="Numero">Numero</label>
@@ -82,16 +83,16 @@
 
         <p class="bairro">
             <label for="Bairro">Bairro</label>
-            <input type="text" name="bairro" placeholder="bairro" />
+            <input type="text" name="bairro" id="bairro" placeholder="bairro" />
         </p>
 
         <p class="Cidade">
             <label for="Cidade">Cidade</label>
-            <input type="text" name="cidade" placeholder="Cidade" />
+            <input type="text" name="cidade" id="cidade" placeholder="Cidade" />
         </p>
         <p class="uf">
             <label for="uf">uf</label>
-            <input type="text" name="uf" placeholder="uf" />
+            <input type="text" name="uf" id="uf" placeholder="uf" />
         </p>
         <p class="Pais">
             <label for="Pais">Pais</label>
