criação do cadasto de interessados e doadores - Criação das funcionalidades - finalizaçoes com imagem encritptada com acerto no css

--- a/CadastroTDR/View/CorpoEmail.html
+++ b/CadastroTDR/View/CorpoEmail.html
@@ -11,6 +11,8 @@
             background-color: #666666;
             color: #333333;
             font-family: Georgia, "Times New Roman", Times, serif;
+             margin: auto;
+            padding: auto;
         }
         
         #estilo {
@@ -19,7 +21,11 @@
             margin: 0 auto;
             background-color: #FFF;
         }
-        
+        h1 {
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
         p {
             line-height: 1.2em;
             clear: both;
@@ -44,7 +50,7 @@ background-image: url(primeira_letra.jpg);
             Seja muito bem vindo a Associação Ferroviária Trilhos do Rio. Agradecemos o desejo de fazer parte da nossa organização.
         </h1>
 
-        <p>A Associação Ferroviária Trilhos do Rio é uma instituição sem fins lucrativos que tem por objetivo a preservação, conservação e produção de projetos culturais, históricos e de mobilidade sobre trilhos no estado do Rio de Janeiro. Realizamos atividades
+        <p>         A Associação Ferroviária Trilhos do Rio é uma instituição sem fins lucrativos que tem por objetivo a preservação, conservação e produção de projetos culturais, históricos e de mobilidade sobre trilhos no estado do Rio de Janeiro. Realizamos atividades
             desde o começo dos anos 2000, pesquisando em campo e coletando dados e informações muitas vezes ocultas e desconhecidas por onde passamos. Desde 2014 somos uma entidade formalizada, com CNPJ e sede situada no bairro de Piedade, na cidade do
             Rio de Janeiro. A partir da formalização da instituição, várias despesas e custos foram incorporados à nossa rotina, como as taxas e outros impostos jurídicos cobrados pela manutenção da entidade, do site e outras mídias, etc por esse motivo
             possuímos um programa de Associados, onde pessoas físicas nos ajudam bastante na cobertura dessas despesas, realizando contribuições em qualquer valor. Felizmente nosso raio de ação também se amplificou bastante, e hoje já temos projetos voltados
